--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,7 +9,13 @@ html {
   min-height: 100vh;
 }
 
+.page-enter-active, .page-leave-active {
+  transition: opacity 2s;
+}
 
+.page-enter, .page-leave-active {
+  opacity: 0;
+}
 
 .flex {
   display: flex;
